--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/build/web/">
+  <base href="./">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -65,7 +65,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=4202225969');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=824891346');
       });
     }
   </script>
